[metadata]
name = django-serverside
version = 22.3.10
author = Marcus Wörner
author_email = woernerm@protonmail.com
description = Django app for adding users, views and functions (if supported) to a database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/woernerm/django-serverside
project_urls =
    Bug Tracker = https://github.com/woernerm/django-serverside/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Intended Audience :: Developers
    Natural Language :: English

[options]
package_dir =
    = serverside
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires = 
    psycopg2
    Django
    
[options.packages.find]
where = serverside